HTML and CSS of why mike fitness finished

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <main>
       <section id="highlights">
         <div class="container">
-          <div class="row">
-            <h2 class="section__title">
+          <div class="row highlights__row">
+            <h2>
               ¿Por qué escoger a <span class="text__red">Mike Fitness?</span>
             </h2>
             <div class="highlights__wrappers">
@@ -134,7 +134,11 @@
 
       <section id="bestseller">
         <div class="container">
-          <div class="row"></div>
+          <div class="row">
+            <h2 class="section__title">
+                <span class="text__red"> Más</span> Vendido
+            </h2>
+          </div>
         </div>
       </section>
 
