Bestselling program added (edit later)

--- a/index.html
+++ b/index.html
@@ -138,6 +138,27 @@
             <h2 class="section__title">
                 <span class="text__red"> Más</span> Vendido
             </h2>
+            <div class="programs">
+                <div class="program">
+                    <figure class="bestseller__img--wrapper">
+                        <img class="program__img" src="./assets/BodyWeight-MikeFitness.jpg" alt="">
+                    </figure>
+                    <div class="programs__title">
+                        <h2></h2>
+                    </div>
+                    <div class="program__ratings">
+                        <i class="fas fa-star" ></i>
+                        <i class="fas fa-star" ></i>
+                        <i class="fas fa-star" ></i>
+                        <i class="fas fa-star" ></i>
+                        <i class="fas fa-star" ></i>
+                    </div>
+                    <div class="program__price">
+                        <span class="program__price--normal" > $49.95</span>
+                        <span class="program__price--discount" >$24.95</span>
+                    </div>
+                </div>
+            </div>
           </div>
         </div>
       </section>
