CSS and HTML finished

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
       <nav>
         <div class="nav__container">
           <figure class="nav__logo--img">
-            <img
-              class="logo"
-              src="./assets/M-removebg-preview.png"
-              alt=""
-            />
+            <img class="logo" src="./assets/M-removebg-preview.png" alt="" />
           </figure>
           <ul class="nav__links">
             <li><a class="nav__link" href="#home">Inicio</a></li>
-            <li><a class="nav__link" href="#supplements">Suplementos</a></li>
+            <li>
+              <a
+                class="nav__link"
+                href="http://kinobody.com/discount/mike.fitness_PR?redirect=%2Fproducts%2Flean-stack%3Fafmc%3Dmike.fitness_PR%26utm_campaign%3Dmike.fitness_PR%26utm_source%3Dleaddyno%26utm_medium%3Daffiliate"
+                >Suplementos</a
+              >
+            </li>
             <li>
               <a class="nav__link nav__link--primary" href="#programs"
                 >Programas</a
@@ -32,8 +34,27 @@
             </li>
           </ul>
         </div>
-      </nav>
-      <header>
+        <button class="button__menu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="menu__backdrop">
+          <button class="button__menu button__menu--close">
+            <i class="fas fa-times"></i>
+          </button>
+          <ul>
+              <li class="menu__links">
+                  <a class="menu__link" href="#">Inicio</a>
+                  <a class="menu__link" href="#programs">Programas</a>
+                  <a
+                  class="menu__link"
+                  href="http://kinobody.com/discount/mike.fitness_PR?redirect=%2Fproducts%2Flean-stack%3Fafmc%3Dmike.fitness_PR%26utm_campaign%3Dmike.fitness_PR%26utm_source%3Dleaddyno%26utm_medium%3Daffiliate"
+                  >Suplementos</a
+                  >
+                </li>
+            </ul>
+        </div>
+        </nav>
+        <header>
         <div class="header__container">
           <div class="header__description">
             <h1>Bienvenidos a Mike Fitness</h1>
@@ -41,7 +62,7 @@
               Donde no solo se promueve el ejercicio, sino que un
               <span class="text__red"> estilo de vida</span>
             </h2>
-            <button class="button" href="#programs">Ver Programas</button>
+            <a href="#programs" class="button">Ver Programas</a>
           </div>
           <figure class="header__image--wrapper">
             <img src="./assets/undraw_personal_trainer_re_cnua.svg" alt="" />
@@ -62,9 +83,7 @@
                   <div class="highlight__img">
                     <i class="fas fa-dumbbell"></i>
                   </div>
-                  <h3 class="highlight__subtitle">
-                    Progreso Constante
-                  </h3>
+                  <h3 class="highlight__subtitle">Progreso Constante</h3>
                   <p class="highlight__para">
                     Semana tras semana progresar en el gimnasio.
                   </p>
@@ -73,9 +92,7 @@
                   <div class="highlight__img">
                     <i class="fas fa-calendar"></i>
                   </div>
-                  <h3 class="highlight__subtitle">
-                    3+ Meses de Ejercicios
-                  </h3>
+                  <h3 class="highlight__subtitle">3+ Meses de Ejercicios</h3>
                   <p class="highlight__para">
                     Los programas tienen sobre 3 meses de Ejercicios.
                   </p>
@@ -84,9 +101,7 @@
                   <div class="highlight__img">
                     <i class="fas fa-clock"></i>
                   </div>
-                  <h3 class="highlight__subtitle">
-                    Ahorro de Tiempo
-                  </h3>
+                  <h3 class="highlight__subtitle">Ahorro de Tiempo</h3>
                   <p class="highlight__para">
                     RPT para máximizar el tiempo en el gimnasio
                   </p>
@@ -97,9 +112,7 @@
                   <div class="highlight__img">
                     <i class="fas fa-bed"></i>
                   </div>
-                  <h3 class="highlight__subtitle">
-                    Máxima Recuperación
-                  </h3>
+                  <h3 class="highlight__subtitle">Máxima Recuperación</h3>
                   <p class="highlight__para">
                     Se entrenará tres veces a la semana para recuperación.
                   </p>
@@ -108,9 +121,7 @@
                   <div class="highlight__img">
                     <i class="fas fa-wallet"></i>
                   </div>
-                  <h3 class="highlight__subtitle">
-                    Accesible
-                  </h3>
+                  <h3 class="highlight__subtitle">Accesible</h3>
                   <p class="highlight__para">
                     Con un solo pago podras utilizar el programa cuando desees.
                   </p>
@@ -119,11 +130,10 @@
                   <div class="highlight__img">
                     <i class="fas fa-bacon"></i>
                   </div>
-                  <h3 class="highlight__subtitle">
-                    Plan de Nutrición
-                  </h3>
+                  <h3 class="highlight__subtitle">Plan de Nutrición</h3>
                   <p class="highlight__para">
-                    Incluye un plan de nutrición sencillo para lograr la meta que te propongas.
+                    Incluye un plan de nutrición sencillo para lograr la meta
+                    que te propongas.
                   </p>
                 </div>
               </div>
@@ -136,28 +146,32 @@
         <div class="container">
           <div class="row">
             <h2 class="section__title">
-                <span class="text__red"> Más</span> Vendido
+              <span class="text__red"> Más</span> Vendido
             </h2>
-            <div class="programs">
-                <div class="program">
-                    <figure class="bestseller__img--wrapper">
-                        <img class="program__img" src="./assets/BodyWeight-MikeFitness.jpg" alt="">
-                    </figure>
-                    <div class="programs__title">
-                        <h2></h2>
-                    </div>
-                    <div class="program__ratings">
-                        <i class="fas fa-star" ></i>
-                        <i class="fas fa-star" ></i>
-                        <i class="fas fa-star" ></i>
-                        <i class="fas fa-star" ></i>
-                        <i class="fas fa-star" ></i>
-                    </div>
-                    <div class="program__price">
-                        <span class="program__price--normal" > $49.95</span>
-                        <span class="program__price--discount" >$24.95</span>
-                    </div>
+            <div class="bestseller">
+              <div class="program">
+                <figure class="bestseller__img--wrapper">
+                  <img
+                    class="program__img"
+                    src="./assets/BodyWeight-MikeFitness.jpg"
+                    alt=""
+                  />
+                </figure>
+                <div class="program__title">
+                  <h2>Programa de peso corporal</h2>
                 </div>
+                <div class="program__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <div class="program__price">
+                  <span class="program__price--normal"> $49.95</span>
+                  <span class="program__price--discount">$24.95</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -165,9 +179,112 @@
 
       <section id="programs">
         <div class="container">
-          <div class="row"></div>
+          <div class="row">
+            <h2 class="section__title">
+              Todos los <span class="text__red">Programas</span>
+            </h2>
+            <div class="programs">
+              <div class="program">
+                <figure class="bestseller__img--wrapper">
+                  <img
+                    class="program__img"
+                    src="./assets/BodyWeight-MikeFitness.jpg"
+                    alt=""
+                  />
+                </figure>
+                <div class="program__title">
+                  <h2>Programa de peso corporal</h2>
+                </div>
+                <div class="program__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <div class="program__price">
+                  <span class="program__price--normal"> $49.95</span>
+                  <span class="program__price--discount">$24.95</span>
+                </div>
+              </div>
+              <div class="program">
+                <figure class="bestseller__img--wrapper">
+                  <img
+                    class="program__img"
+                    src="./assets/BodyWeight-MikeFitness.jpg"
+                    alt=""
+                  />
+                </figure>
+                <div class="program__title">
+                  <h2>Programa de Pesas Libres</h2>
+                </div>
+                <div class="program__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="program__price">
+                  <span class="program__price--normal"> $49.95</span>
+                  <span class="program__price--discount">$35.95</span>
+                </div>
+              </div>
+              <div class="program">
+                <figure class="bestseller__img--wrapper">
+                  <img
+                    class="program__img"
+                    src="./assets/BodyWeight-MikeFitness.jpg"
+                    alt=""
+                  />
+                </figure>
+                <div class="program__title">
+                  <h2>Enfocado en Piernas</h2>
+                </div>
+                <div class="program__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="program__price">
+                  <span class="program__price--normal"> $49.95</span>
+                  <span class="program__price--discount">$35.95</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
+
+      <section id="bestseller__back-up">
+        <h2>Volver a <span class="text__red"> Más Vendido</span></h2>
+        <a href="#bestseller" class="button">Más Vendido</a>
+      </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <a href="#home">
+            <figure class="footer__image--wrapper">
+              <img
+                class="footer__logo--img"
+                src="./assets/M-removebg-preview.png"
+                alt=""
+              />
+            </figure>
+          </a>
+
+          <ul class="footer__links--wrapper">
+            <li><a class="footer__link" href="#home">Inicio</a></li>
+            <li><a class="footer__link" href="#supplements">Suplementos</a></li>
+            <li><a class="footer__link" href="#programs">Programas</a></li>
+          </ul>
+          <div class="footer__copyright">Copyright &copy; 2022 MikeFitness</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
