ecommerces done (missing sales proporties)

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </section>
 
       <section id="bestseller__back-up">
-        <h2>Volver a <span class="text__red"> Más Vendido</span></h2>
+        <h2 class="section__title" >Volver a <span class="text__red"> Más Vendido</span></h2>
         <a href="#bestseller" class="button">Más Vendido</a>
       </section>
     </main>
