--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <figure class="bestseller__img--wrapper">
                   <img
                     class="program__img"
-                    src="./assets/BodyWeight-MikeFitness.jpg"
+                    src="./assets/LegsProgram.png"
                     alt=""
                   />
                 </figure>
