--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
         </p>
 
         <p class="introduction__para">
-            Por estar razón he creado un programa sumamente eficiente y sencillo para seguir y poder obtener un físico que exuda fuerza, funcionalidad y atracción sexual.
+            Por estar razón he creado un programa sumamente eficiente y sencillo para seguir y poder obtener un físico que exuda <span class="bold"> fuerza, funcionalidad y atracción sexual. </span>
 
-            Les estaré mostrando paso a paso como transformar su vida de la manera más efectiva y sencillas posible para poder asegurar consistencia y resultados sostenibles.
+            Les estaré mostrando paso a paso como transformar su vida de la manera más efectiva y sencilla posible para poder asegurar  <span class="bold"> consistencia y resultados sostenibles.</span>
 
             Aprenderás a hacerlo sin necesidad de ir al gimnasio todos los dias, forzarte a entrar a dietas insostenibles, tener genetica favorable, caer en el uso de suplementos inecesarios para lograr su meta. 
         </p>
 
         <p class="introduction__para">
-          A traves de este programa vas a poder transformar tu vida junto a un sin numero de personas que se estarán uniendo al mismo. Puedes esperar de este sistema poder bajar de peso hasta digitos menores de 10% de grasa. 
+          A traves de este programa vas a poder transformar tu vida junto a un sin numero de personas que se estarán uniendo al mismo. <span class="bold"> Puedes esperar de este sistema poder bajar de peso hasta digitos menores de 10% de grasa. </span>
           
-          Sostener y aumentar masa muscular para poder lograr metas especificas (Records Personales consistentemente). Ganar confianza dentro de tu propio cuerpo y dentro del gimnasio logrando metas que jamás te pensaste capaz de lograr. 
+          Sostener y aumentar masa muscular para poder <span class="bold">lograr metas especificas (Records Personales consistentemente).</span> Ganar confianza dentro de tu propio cuerpo y dentro del gimnasio logrando metas que jamás te pensaste capaz de lograr. 
 
-          Cambiar de mentalidad hacia una actitud de poder lograr tus metas si mantienes la consistencia. Poder tomar control de tu físico entre muchas cosas más...
+          Cambiar de mentalidad hacia una actitud de poder lograr tus metas si mantienes la consistencia. <span class="bold">Poder tomar control de tu físico entre muchas cosas más...</span>
         </p>
 
 
