Cambio de Fotos para el primer programa añadido

--- a/index.html
+++ b/index.html
@@ -211,32 +211,45 @@
         <div class="container">
           <div class="row">
             <h2 class="section__title">
-              Todos los <span class="text__red">Programas</span>
+              Programa de Peso Corporar
             </h2>
+
             <div class="programs">
               <div class="program">
                 <figure class="bestseller__img--wrapper">
                   <img
                     class="program__img"
-                    src="./assets/BodyWeight-MikeFitness.jpg"
+                    src="./assets/Bodyweight Program.png"
                     alt=""
                   />
                 </figure>
-                <div class="program__title">
-                  <h2>Programa de peso corporal</h2>
+
+                <div class="program__includes">
+
+                  <ul class="program__list">
+                    <li class="program__bullet"> <i class="fas fa-check"></i> 12 Meses de Entrenamientos de Peso Corporar Progresivos</li>
+                    <li class="program__bullet"> <i class="fas fa-check"></i> Estructura Nutricional (Divertida y Flexible)</li>
+                    <li class="program__bullet"> <i class="fas fa-check"></i> Videos Tutoriales de los Ejercicios con Progresiones</li>
+                  </ul>
+
+                </div>
+
+                <div class="program__title button button__programs">
+                  <a>Unirme al programa por tan solo $39.95</a>
                 </div>
                 <div class="program__ratings">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="program__price">
-                  <span class="program__price--normal"> $49.95</span>
-                  <span class="program__price--discount">$24.95</span>
+                  <span class="program__price--normal"> $69.95</span>
+                  <span class="program__price--discount">$39.95</span>
                 </div>
               </div>
+
               <div class="program">
                 <figure class="bestseller__img--wrapper">
                   <img
@@ -245,8 +258,8 @@
                     alt=""
                   />
                 </figure>
-                <div class="program__title">
-                  <h2>Programa de Pesas Libres</h2>
+                <div class="program__title button button__programs">
+                  <a>Unirme al programa por tan solo $39.95</a>
                 </div>
                 <div class="program__ratings">
                   <i class="fas fa-star"></i>
@@ -257,7 +270,7 @@
                 </div>
                 <div class="program__price">
                   <span class="program__price--normal"> $49.95</span>
-                  <span class="program__price--discount">$35.95</span>
+                  <span class="program__price--discount">$39.95</span>
                 </div>
               </div>
               <div class="program">
@@ -268,8 +281,8 @@
                     alt=""
                   />
                 </figure>
-                <div class="program__title">
-                  <h2>Enfocado en Piernas</h2>
+                <div class="program__title button button__programs">
+                  <a>Unirme al programa por tan solo $39.95</a>
                 </div>
                 <div class="program__ratings">
                   <i class="fas fa-star"></i>
